scss/_content-create.scss
.field-edit-upload-button {
  height: 120px;
  width: 160px;
  background-color: red;
  background-position: center;
  background-size: cover;
}

.dullahan-modal {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 100;
  display: none;
  margin-top: 64px;
  margin-left: 96px;
  background-color: $color-background;
}

.dullahan-modal.is-open {
  display: block;
}

.content-create-media-header {
  width: 100%;
  height: 80px;
  background-color: red;
  position: absolute;
  top:0;
  z-index: 200;
}

.content-create-media-items-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  overflow-y: scroll;
  height: 100%;
}

